package com.tetras.generic;

public abstract class AbstractFactory {

    public abstract DatePicker createDatePicker();

    public abstract Label createLabel();

    public abstract Button createButton();
}
