package com.tetras.holo;

public class HoloDatePicker {

    private String name = "HoloDatePicker";

    public HoloDatePicker() {
        System.out.println(name + " created");
    }

    public String select() {
        return name + " selected";
    }
}
