package com.tetras.holo;

public class HoloLabel {

    private String name = "HoloLabel";

    public HoloLabel() {
        System.out.println(name + " created");
    }

    public String show() {
        return name + " shown";
    }
}
