package com.tetras.material;

import com.tetras.generic.DatePicker;

public class MaterialDatePicker extends DatePicker {

    public MaterialDatePicker() {
        super("MaterialDatePicker");
    }

}
