package com.tetras.material;

public class MaterialLabel {

    private String name = "MaterialLabel";

    public MaterialLabel() {
        System.out.println(name + " created");
    }

    public String show() {
        return name + " shown";
    }
}
