@startuml AbstractFactory

skinparam class {
    BackgroundColor<<holo>> #9bca9d
    BackgroundColor<<material>> #0bca9d
	BackgroundColor<<holofactory>> #70baf4
	BackgroundColor<<materialfactory>> #00baf4
}
abstract class Component {
    - name: String
    + Component(name: String)
    + getName(): String
}
abstract class Button {
    + click(): String
}
Component <|-- Button
abstract class Label {
    + show():String
}
Component <|-- Label
abstract class DatePicker {
    + select():String
}
Component <|-- DatePicker
abstract class AbstractFactory {
    + createButton(): Button
    + createDatePicker(): DatePicker
    + createLabel(): Label
}

class HoloButton <<holo>>
Button <|-- HoloButton
class HoloLabel <<holo>>
Label <|-- HoloLabel
class HoloDatePicker <<holo>>
DatePicker <|-- HoloDatePicker

class HoloFactory <<holofactory>>
AbstractFactory <|-- HoloFactory

class MaterialButton <<material>>
Button <|-- MaterialButton
class MaterialLabel <<material>>
Label <|-- MaterialLabel
class MaterialDatePicker <<material>>
DatePicker <|-- MaterialDatePicker

class MaterialFactory <<materialfactory>>
AbstractFactory <|-- MaterialFactory
@enduml
